[package]
name = "br_financial"
description = "It's a lib to export calc of financing real state"
version = "0.3.0"
edition = "2024"
authors = ["Fabiano Martins <fabiano.paula.martins@gmail.com>"]
license = "MIT"
repository = "https://github.com/ofabianomartins/br_financing"

[dependencies]
anyhow = "1.0.100"
rust_decimal = { version = "1.39.0", features = ["maths"] }
rust_decimal_macros = "1.39.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
